TFG/force-app/main/default/objects/Room__c/fields/BasePrice__c.field-meta.xml
<CustomField>
    <fullName>BasePrice__c</fullName>
    <label>Base Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>