TFG/force-app/main/default/objects/Room__c/fields/BedCount__c.field-meta.xml
<CustomField>
    <fullName>BedCount__c</fullName>
    <label>Bed Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>