TFG/force-app/main/default/objects/Room__c/fields/CheckInDate__c.field-meta.xml
<CustomField>
    <fullName>CheckInDate__c</fullName>
    <label>Check-In Date</label>
    <type>Date</type>
</CustomField>