TFG/force-app/main/default/objects/Room__c/fields/CheckOutDate__c.field-meta.xml
<CustomField>
    <fullName>CheckOutDate__c</fullName>
    <label>Check-Out Date</label>
    <type>Date</type>
</CustomField>