TFG/force-app/main/default/objects/Room__c/fields/HasAirConditioning__c.field-meta.xml
<CustomField>
    <fullName>HasAirConditioning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasAirConditioning</label>
    <type>Checkbox</type>
</CustomField>