TFG/force-app/main/default/objects/Room__c/fields/HasBalcony__c.field-meta.xml
<CustomField>
    <fullName>HasBalcony__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Balcony</label>
    <type>Checkbox</type>
</CustomField>