TFG/force-app/main/default/objects/Room__c/fields/HasSeaView__c.field-meta.xml
<CustomField>
    <fullName>HasSeaView__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasSeaView</label>
    <type>Checkbox</type>
</CustomField>