TFG/force-app/main/default/objects/Room__c/fields/HasWifi__c.field-meta.xml
<CustomField>
    <fullName>HasWifi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Wifi</label>
    <type>Checkbox</type>
</CustomField>