TFG/force-app/main/default/objects/Room__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Occupancy</label>
    <type>Checkbox</type>
</CustomField>