TFG/force-app/main/default/objects/Room__c/fields/RoomNumber__c.field-meta.xml
<CustomField>
    <fullName>RoomNumber__c</fullName>
    <label>Room Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>