TFG/force-app/main/default/objects/Room__c/fields/RoomType__c.field-meta.xml
<CustomField>
    <fullName>RoomType__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Individual</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Double</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Suite</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Familiar</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Deluxe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>