TFG/force-app/main/default/objects/Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Floor__c</columns>
    <columns>Hotel__c</columns>
    <columns>RoomType__c</columns>
    <columns>BasePrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>